create project bank

--- a/DATN_F21/src/main/resources/application.properties
+++ b/DATN_F21/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/DATN
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=yenphuong1108
+spring.datasource.password=12345678
 
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
