--- a/DATN_F21/src/main/resources/application.properties
+++ b/DATN_F21/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/DATN
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.password=123
 
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -12,8 +12,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #Facebook
 #spring.security.oauth2.client.registration.facebook.client-id=1479636722375666
 #spring.security.oauth2.client.registration.facebook.client-secret=57615ea4ffe8e36f0a907afcbd33b4e9
-
-
 
 
 #spring.servlet.multipart.max-file-size = 20MB
