--- a/DATN_F21/bin/src/main/resources/application.properties
+++ b/DATN_F21/bin/src/main/resources/application.properties
@@ -1,10 +1,11 @@
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/DATN
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=12345678
-
-spring.jpa.hibernate.ddl-auto = none
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.password=123
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #Google
 #spring.security.oauth2.client.registration.google.client-id=1031966775769-8cifq3vogh5o6hd97hm9760podilb7em.apps.googleusercontent.com
