--- a/DATN_F21/src/main/resources/application.properties
+++ b/DATN_F21/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= false
 
 #Google
 #spring.security.oauth2.client.registration.google.client-id=1031966775769-8cifq3vogh5o6hd97hm9760podilb7em.apps.googleusercontent.com
