--- a/DATN_F21/pom.xml
+++ b/DATN_F21/pom.xml
@@ -61,16 +61,19 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-		</dependency> -->
-		
-		<!-- <dependency> <groupId>org.testng</groupId> <artifactId>testng</artifactId> 
+		</dependency>
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		 <dependency> <groupId>org.testng</groupId> <artifactId>testng</artifactId> 
 			<version>6.8</version> <scope>test</scope> </dependency> <dependency> <groupId>org.seleniumhq.selenium</groupId> 
 			<artifactId>selenium-java</artifactId> <version>3.141.59</version> </dependency> -->
 	</dependencies>
