--- a/DATN_F21/src/main/resources/application.properties
+++ b/DATN_F21/src/main/resources/application.properties
@@ -11,15 +11,15 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 #Google
 spring.security.oauth2.client.registration.google.client-id=1031966775769-8cifq3vogh5o6hd97hm9760podilb7em.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=UWjmQaiwPdreB32G1udDMobw
-#Facebook
-spring.security.oauth2.client.registration.facebook.client-id=1479636722375666
-spring.security.oauth2.client.registration.facebook.client-secret=57615ea4ffe8e36f0a907afcbd33b4e9
+#facebook
+spring.security.oauth2.client.registration.facebook.client-id =2908300032725583
+spring.security.oauth2.client.registration.facebook.client-secret=57121523ddb3d9de3b953eb0ea57a93d
 
 
 
 
-#spring.servlet.multipart.max-file-size = 20MB
-#spring.servlet.multipart.max-request-size = 20MB
+spring.servlet.multipart.max-file-size = 20MB
+spring.servlet.multipart.max-request-size = 20MB
 
-#spring.servlet.multipart.enabled = true
-#spring.servlet.multipart.file-size-threshold = 1MB
+spring.servlet.multipart.enabled = true
+spring.servlet.multipart.file-size-threshold = 1MB
