--- a/DATN_F21/src/main/resources/application.properties
+++ b/DATN_F21/src/main/resources/application.properties
@@ -18,8 +18,8 @@ spring.security.oauth2.client.registration.facebook.client-secret=57615ea4ffe8e3
 
 
 
-#spring.servlet.multipart.max-file-size = 20MB
-#spring.servlet.multipart.max-request-size = 20MB
+spring.servlet.multipart.max-file-size = 20MB
+spring.servlet.multipart.max-request-size = 20MB
 
-#spring.servlet.multipart.enabled = true
-#spring.servlet.multipart.file-size-threshold = 1MB
+spring.servlet.multipart.enabled = true
+spring.servlet.multipart.file-size-threshold = 1MB
