--- a/DATN_F21/src/main/resources/application.properties
+++ b/DATN_F21/src/main/resources/application.properties
@@ -1,11 +1,22 @@
 #spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://john.db.elephantsql.com:5432/jyjopfpi
-spring.datasource.username=jyjopfpi
-spring.datasource.password=UNOwdB-tRJoLpU5yQ5MR8zXxoT6o8RFv
+#spring.datasource.url=jdbc:postgresql://john.db.elephantsql.com:5432/jyjopfpi
+#spring.datasource.username=jyjopfpi
+#spring.datasource.password=UNOwdB-tRJoLpU5yQ5MR8zXxoT6o8RFv
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/DATN
+spring.datasource.username=postgres
+spring.datasource.password=123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= false
+
+
 
 #Google
 spring.security.oauth2.client.registration.google.client-id=1031966775769-8cifq3vogh5o6hd97hm9760podilb7em.apps.googleusercontent.com
