update cuoi cung

--- a/Bank/src/main/resources/application.properties
+++ b/Bank/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/Bank
-spring.datasource.username=postgres
-spring.datasource.password=123
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://john.db.elephantsql.com:5432/gnojwcoe
+spring.datasource.username=gnojwcoe
+spring.datasource.password=w2Fb5GZd4RyzLhW8dKI1lz8IH0OzwwAz
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= false
